--- a/.air.toml
+++ b/.air.toml
@@ -6,14 +6,14 @@ bin = "./tmp/main"
 cmd = "go build -tags dev -o ./tmp/main ."
 
 delay = 20
-exclude_dir = ["assets", "tmp", "vendor"]
+exclude_dir = ["tmp"]
 exclude_file = []
 exclude_regex = [".*_templ.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
 include_dir = []
-include_ext = ["go", "tpl", "tmpl", "templ", "html"]
+include_ext = ["go", "templ"]
 kill_delay = "0s"
 log = "build-errors.log"
 send_interrupt = false
